# NextPanel

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: dockerhub.yml
backend/: pyproject.toml
backend/nextpanel/: arr.py  cloudflare_access.py  config.py  discover.py  library.py  main.py  models.py  push.py  ratelimit.py  scheduler.py  schemas.py  security.py  settings_service.py  status.py
backend/nextpanel/api/: auth.py  deps.py  detail.py  discover.py  push.py  requests.py  search.py  settings.py  users.py  webhooks.py
backend/tests/: conftest.py  test_auth.py  test_detail.py  test_discover.py  test_push.py  test_requests.py  test_search.py  test_security.py  test_sso.py  test_webhooks.py
docker/: Dockerfile
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  index.css  main.tsx  nozoom.ts
frontend/src/api/: client.ts  push.ts  types.ts
frontend/src/components/: NotificationsButton.tsx  RequestButton.tsx  Sidebar.tsx  common.tsx  icons.tsx  password.tsx
frontend/src/pages/: Discover.tsx  Login.tsx  Requests.tsx  Settings.tsx  Title.tsx  Users.tsx
